src/test/ui/dropck/dropck-union.nll.stderr
error[E0597]: `v` does not live long enough
  --> $DIR/dropck-union.rs:49:18
   |
LL |     v.0.set(Some(&v)); //~ ERROR: `v` does not live long enough
   |                  ^^ borrowed value does not live long enough
LL | }
   | -
   | |
   | `v` dropped here while still borrowed
   | borrow later used here, when `v` is dropped

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
